--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
 
     <!-- メインビジュアル -->
     <section class="grid">
-        <!-- CSSのgridを使い、3枚の画像を同じ場所に重ねて配置します -->
         <img src="images/mainimage_01.jpg" alt="メインビジュアル1" class="hero-slide w-full h-auto transition-opacity duration-[2000ms] ease-in-out col-start-1 row-start-1 opacity-100">
         <img src="images/mainimage_02.jpg" alt="メインビジュアル2" class="hero-slide w-full h-auto transition-opacity duration-[2000ms] ease-in-out col-start-1 row-start-1 opacity-0">
         <img src="images/mainimage_03.jpg" alt="メインビジュアル3" class="hero-slide w-full h-auto transition-opacity duration-[2000ms] ease-in-out col-start-1 row-start-1 opacity-0">
@@ -186,10 +185,10 @@
                         <p class="text-slate-600 leading-relaxed">創業18年、施工実績は<span class="font-bold text-xl text-sky-700">20,000</span>件以上。年間<span class="font-bold text-xl text-sky-700">3,000</span>件以上の施工実績は、地域のお客様からの信頼の証です。豊富な経験を元に、あらゆるお悩みに対応します。</p>
                     </div>
                 </div>
-                <!-- 理由2 -->
+                <!-- 理由2 (画像差し替え済み) -->
                 <div class="md:flex items-center gap-12 flex-row-reverse scroll-animate">
                     <div class="md:w-1/2">
-                        <img src="https://images.unsplash.com/photo-1621905251189-08b45d6a269e?q=80&w=1200&auto=format&fit=crop" alt="丁寧な作業風景" class="rounded-xl shadow-2xl shadow-slate-900/20 object-cover h-full w-full">
+                        <img src="images/sekou.jpg" alt="丁寧な作業風景" class="rounded-xl shadow-2xl shadow-slate-900/20 object-cover h-full w-full">
                     </div>
                     <div class="md:w-1/2 mt-8 md:mt-0">
                          <p class="text-sky-600 font-bold">REASON 02</p>
@@ -205,7 +204,7 @@
                     <div class="md:w-1/2 mt-8 md:mt-0">
                         <p class="text-sky-600 font-bold">REASON 03</p>
                         <h4 class="text-3xl font-bold my-2">LINEで気軽に相談＆見積もり</h4>
-                        <p class="text-slate-600 leading-relaxed">気になる箇所の写真を撮ってLINEで送るだけ！概算のお見積もりをスピーディーにお伝えします。しつこい営業は一切ありませんので、まずはお気軽にご相談ください。</p>
+                        <p class="text-slate-600 leading-relaxed">気になる箇所の写真を撮って LINE で送るだけ！概算のお見積もりをスピーディーにお伝えします。しつこい営業は一切ありませんので、まずはお気軽にご相談ください。</p>
                     </div>
                 </div>
             </div>
@@ -491,4 +490,3 @@
 </script>
 </body>
 </html>
-
