--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <div class="container mx-auto px-6 text-center text-white scroll-animate">
             <h3 class="text-4xl font-bold mb-4">さあ、お住まいの悩みを<br class="md:hidden">解決しませんか？</h3>
             <p class="text-slate-300 mb-10 max-w-2xl mx-auto">ご相談・お見積もりは無料です。どんな些細なことでも構いませんので、まずはお気軽にご連絡ください。<br>しつこい営業は一切行いません。</p>
-            <a href="#" class="btn-shine btn-3d-green text-xl py-5 px-12 inline-flex items-center space-x-3">
+            <a href="https://page.line.me/znh0449g?openQrModal=true" class="btn-shine btn-3d-green text-xl py-5 px-12 inline-flex items-center space-x-3">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a2 2 0 01-2-2V10a2 2 0 012-2h8z" />
                 </svg>
